--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 /* Hier können Stiele für die ganze Webseite angegeben werden. */
 body {
     margin: 0;
+    background-color: hotpink(192, 192, 141) (211, 203, 132);
 }
 
 /* Hier werden 2 Elemente nebeneinander gepackt.
@@ -29,4 +30,8 @@ body {
 .text-and-img img {
     border-radius: 2rem; /* Damit können die Ecken abgerundet werden. */
     width: 100%; /* Braucht es damit das Bild im Container bleibt und nicht viel zu gross ist. */
+}
+
+.red {
+    color: red;
 }
