--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /* Hier können Stiele für die ganze Webseite angegeben werden. */
 body {
     margin: 0;
-    background-color: hotpink(192, 192, 141) (211, 203, 132);
+    background-color:floralwhite; (192, 192, 141) (211, 203, 132);
 }
 
 /* Hier werden 2 Elemente nebeneinander gepackt.
@@ -34,8 +34,7 @@ body {
 
 .red {
  color:darkred; (220, 162, 171); (208, 198, 105);
-}
-
+{}
 .bigger {
     font-size: 36pt;
     font-weight: bold;
