--- a/style.css
+++ b/style.css
@@ -37,9 +37,22 @@ body {
 }
 
 .bigger {
-    font-size: 36pt;
-    font-weight: bold;
+    font-size: 24pt;
+    font-weight: normal;
+}
 
-    .red {
-    }
+.abstand {
+    padding: 1rem;
+    padding-top: 0;
+}
+.bg-blue {
+    border: 5px plum;
+    border-radius: 4rem;
+    margin: 10px;
+    padding: 2rem;
+}
+
+h1 {
+    border: 2px dotted forestgreen;
+    padding: 1rem;
 }
