Hintergrund Farbe geänder und Rand der Animation

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /* Hier können Stiele für die ganze Webseite angegeben werden. */
 body {
     margin: 0;
-    background-color: floralwhite;
+    background-color: thistle;
 }
 
 /* Hier werden 2 Elemente nebeneinander gepackt.
